# support-ticket-triage-assistant

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  sdlc.project.yaml
.agents/: README.md  code-reviewer.md  documentation-agent.md  implementation-planner.md  product-analyst.md  refactor-reviewer.md  release-manager.md  solution-architect.md  test-eval-designer.md
.cursor/: mcp.json
.cursor/rules/: enterprise-sdlc-pr-review.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  eval_regression.md  feature_task.md  slice_proposal.md
.github/workflows/: README.md  ci.yml
.skills/: README.md  architecture-review.md  database-migration-review.md  fastapi-service-review.md  github-backlog-creation.md  github-issue-quality-review.md  hifi-audio-support-taxonomy-design.md  langgraph-workflow-review.md  postgresql-schema-review.md  rag-retrieval-design-review.md  readme-runbook-documentation.md  release-readiness-review.md  requirement-tightening.md  synthetic-data-design.md  test-eval-design.md  ticket-readiness-rule-design.md
data/knowledge_base/: README.md  kb-bt-002.json  kb-fw-010.json  kb-return-002.json  kb-ship-001.json  kb-sound-005.json  kb-sub-003.json  kb-warr-001.json  kb-wifi-004.json
data/sample/: README.md  products.json  tickets.json
enterprise_sdlc_mcp/: README.md  __init__.py
evals/: README.md  RUBRIC.md  __init__.py  fixture_llm.py  loader.py  record_baseline.py  report.py  rubric.py  run_evals.py  runner.py
scripts/: README.md
src/: README.md  config.py
src/api/: main.py
tests/: README.md
(+90 files in other folders)
