[project]
name = "support-ticket-triage-assistant"
version = "0.1.0"
description = "AI-assisted support ticket triage demo for the fictional NorthPeak Audioworks."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "gradio>=4.36,<5",
    "openai>=1.35,<2",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
