[project]
name = "support-ticket-triage-assistant"
version = "0.1.0"
description = "AI-assisted support ticket triage demo for the fictional NorthPeak Audioworks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "gradio>=5,<6",
    "openai>=1.35,<2",
    "python-dotenv>=1.0,<2",
    "mcp>=1.28,<2",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<10",
    "httpx>=0.27,<1",
    "ruff>=0.9,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "data/generated"]

[tool.ruff.lint]
select = ["F"]

[tool.pytest.ini_options]
pythonpath = [".", "enterprise_sdlc_mcp"]
testpaths = ["tests"]
markers = [
    "llm: tests that call the real OpenAI API (require OPENAI_API_KEY)",
]
